# AI-Alter-Ego

./: ai-alter-ego.ipynb  pyproject.toml
