[project]
name = "career-alter-ego"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.42.0",
    "ipykernel>=6.30.1",
    "openai>=1.99.6",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
